--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <artifactId>selenium-support</artifactId>
             <version>4.0.0-alpha-1</version>
         </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
