--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>6</source>
-                    <target>6</target>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<source>6</source>-->
+                    <!--<target>6</target>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -44,7 +44,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>cucumber-selenide-example</projectName>
+                            <projectName>Kinopoisk-Test-Project</projectName>
                             <outputDirectory>target/cucumber-html-reports</outputDirectory>
                             <cucumberOutput>target/cucumber.json</cucumberOutput>
                             <parallelTesting>false</parallelTesting>
@@ -127,16 +127,11 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.1</version>
         </dependency>
-
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-
-
-
     </dependencies>
 
 </project>
